# Aoide

./: .gitignore  Makefile  Makefile.am  Makefile.in  README.md  aclocal.m4  config.guess  config.h  config.status  config.sub  configure  configure.ac  configure~
autom4te.cache/: output.0  output.1  output.2  output.4  output.5  output.7  requests  traces.0  traces.1  traces.2  traces.3  traces.5  traces.6  traces.7
include/: gui.hpp  playerclass.hpp  utity.hpp  vlc.hpp
includes/: audio.hpp  audio_engine.hpp  config.hpp  error.hpp  file.hpp  gui.hpp  input.hpp  loop.hpp  player.hpp  utility.hpp  vlcinstance.hpp
licenses/: SDL3
src/: Makefile  Makefile.am  Makefile.in  aoide  audio.cpp  audio_engine.cpp  config.cpp  error.cpp  file.cpp  gui.cpp  image.cpp  instance.cpp  log.cpp  loop.cpp  main.cpp  player.cpp  sdl.cpp  toolkit.cpp  vlcinstance.cpp
src/.deps/: error.Po  file.Po  gui.Po  instance.Po  io.Po  loop.Po  main.Po  player.Po  sdl.Po  vlcinstance.Po
src/header/: gui.hpp
