bin_PROGRAMS = aoide
aoide_SOURCES = src/main.cpp src/player.cpp src/vlcinstance.cpp src/loop.cpp src/error.cpp src/gui.cpp src/sdl.cpp src/file.cpp includes/gui.hpp includes/player.hpp includes/utility.hpp includes/vlcinstance.hpp
aoide_LDADD = -lvlc -lSDL3 -lSDL3_ttf

dist_pkgdata_DATA = assets/font/unifont-17.0.03.otf

