bin_PROGRAMS = aoide
aoide_SOURCES = src/main.cpp src/player.cpp src/audio_engine.cpp src/loop.cpp src/error.cpp src/gui.cpp src/sdl.cpp src/file.cpp src/config.cpp \
				includes/audio_engine.hpp includes/config.hpp icludes/error.hpp includes/gui.hpp includes/input.hpp includes/loop.hpp includes/player.hpp
aoide_LDADD = -lminiaudio -lSDL3 -lSDL3_ttf -lSDL3_image -ltag


dist_pkgdata_DATA = assets/font/unifont-17.0.03.otf

